@@ -9,6 +9,10 @@ Zope Changes
 
     Restructuring
 
+      - Protect against non-existing zope.conf path and products directories.
+        This makes it possible to run a Zope instance without a Products or
+        lib/python directory.
+
       - updated to ZODB 3.8.1
 
       - Moved exception MountedStorageError from ZODB.POSExceptions
